crates/cli/tests/snapshots/snapshot_tests__json_multiple_exports_same_file.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "unused_files": [],
  "unused_exports": [
    {
      "path": "/project/src/utils.ts",
      "export_name": "helperFn",
      "is_type_only": false,
      "line": 10,
      "col": 4,
      "span_start": 120,
      "is_re_export": false
    },
    {
      "path": "/project/src/utils.ts",
      "export_name": "formatDate",
      "is_type_only": false,
      "line": 25,
      "col": 0,
      "span_start": 300,
      "is_re_export": false
    },
    {
      "path": "/project/src/helpers.ts",
      "export_name": "capitalize",
      "is_type_only": false,
      "line": 1,
      "col": 0,
      "span_start": 0,
      "is_re_export": false
    }
  ],
  "unused_types": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 3
}
