crates/cli/tests/snapshots/snapshot_tests__json_type_only_deps.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: "json_str.replace(&format!(\"\\\"version\\\": \\\"{}\\\"\", env!(\"CARGO_PKG_VERSION\")),\n\"\\\"version\\\": \\\"[VERSION]\\\"\",)"
---
{
  "schema_version": 3,
  "version": "[VERSION]",
  "elapsed_ms": 10,
  "total_issues": 2,
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_optional_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [
    {
      "package_name": "zod",
      "path": "package.json",
      "line": 8
    },
    {
      "package_name": "@types/react",
      "path": "package.json",
      "line": 8
    }
  ],
  "circular_dependencies": []
}
