crates/cli/tests/snapshots/snapshot_tests__json_unlisted_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [
    {
      "package_name": "chalk",
      "imported_from": [
        "/project/src/cli.ts"
      ]
    }
  ],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 1
}
